/*
  Represents replication options for objects.
*/
package drizzled.message;
option optimize_for = SPEED;

option java_package = "org.drizzle.messages";
option java_outer_classname = "Replication";

message ReplicationOptions {
    optional bool is_replicated = 2;
}
